<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Дневник тренировок</string>
    <string name="menu_settings">Настройки</string>
    <string name="title_create_training">Создание новой тренировки</string>
    <string name="title_rename_training">Переименовать тренировку</string>
    <string name="title_rename_exercise">Переименовать упражнение</string>
    <string name="title_activity_add_exercise">Упражнения</string>
    <string name="title_activity_settings">Настройки:</string>
    <string name="title_activity_edit_ex">Создание и удаление упражнений</string>
    <string name="title_activity_create_ex">Новое упражнение</string>
    <string name="title_activity_select_ex_to_add_in_tr">Выберите упражнение:</string>
    <string name="title_activity_result">Выполнение упражнения</string>
    <string name="title_activity_exercise_in_training">Упражнения</string>
    <string name="title_activity_statistic">Статистика</string>
    <string name="title_activity_history_main_acrivity">Тренировочные дни</string>
    <string name="title_activity_history_details">HistoryDetails</string>
    <string name="title_activity_super_main">Дневник тренировок</string>
    <string name="title_activity_history_detail">Проделанная работа</string>
    <string name="SupMainAct_btb_start_tr">Начать тренировку</string>
    <string name="title_activity_sort_ex_in_training_day">Установка последовательности</string>
    <string name="btnSortExInTr">Применить</string>
    <string name="jim_ex_name_base">Жим лежа</string>
    <string name="prised_ex_name_base">Присед</string>
    <string name="stanovaya_ex_name_base">Становая тяга</string>
    <string name="BaseExPodtyag">Подтягивания</string>
    <string name="BaseExBrus">Брусья</string>
    <string name="title_activity_set_sort_ex">Назначте номер упражнения</string>
    <string name="AddExAct_SortEx">Изменить порядок</string>
    <string name="AddExAct_addEx">Добавить упражнение</string>
    <string name="btn_txt_OK">OK</string>
    <string name="btn_txt_plus">+</string>
    <string name="btn_txt_minus">-</string>
    <string name="dialog_del_tr_title">Удалить тренировку</string>
    <string name="dialog_del_approach_title">Удалить подход</string>
    <string name="Dialog_del_ex_title">Удалить упражнение</string>
    <string name="Dialog_del_tr_msg">Вы действительно хотите удалить тренировку %1$s?</string>
    <string name="Dialog_del_ex_msg">Вы действительно хотите убрать упражнение %1$s из тренировки
        %2$s?
    </string>
    <string name="dialog_del_approach_msg">Вы действительно хотите удалить подход %1$s?</string>
    <string name="Dialog_del_tr_btn_del">Удалить</string>
    <string name="Dialog_del_tr_btn_rename">Переименовать</string>
    <string name="Dialog_del_tr_btn_cancel">Отмена</string>
    <string name="count_tr">Всего тренировок</string>
    <string name="count_ex">Всего упражнений</string>
    <string name="count_tr_stat">Всего записей в истории</string>
    <string name="YES">Да</string>
    <string name="NO">Нет</string>
    <string name="create_button">Создать</string>
    <string name="rename_button">Переименовать</string>
    <string name="cancel_button">Отменить</string>
    <string name="delete_button">Удалить</string>
    <string name="zero_input_notif">Имя не может быть пустым</string>
    <string name="training_exist_notif">Тренировка с таким именем уже существует</string>
    <string name="exercise_exist_notif">Упражнение с таким именем уже существует</string>
    <string name="deleted">Удалено</string>
    <string name="nothing_to_deleted">Нечего удалять</string>
    <string name="create_success">Тренировка успешно создана</string>
    <string name="rename_success">Тренировка успешно переименована</string>
    <string name="bar_ex_type_base">Штанга</string>
    <string name="long_dist_ex_type_base">Длинная дистанция</string>
    <string name="count_ex_type_base">Разы</string>
    <string name="weight_ex_type_base">Вес</string>
    <string name="size_ex_type_base">Замеры</string>
    <string name="size_measure_base">Объем(см)</string>
    <string name="weight_measure_base">Вес(кг)</string>
    <string name="repeat_measure_base">Повторения</string>
    <string name="power_weight_measure_base">Вес снаряда(кг)</string>
    <string name="long_distance_measure_base">Расстояние(км)</string>
    <string name="baseMeasure_time">Время(мин,сек)</string>
    <string name="add_action">Добавить</string>
    <string name="rename_action">Переименовать</string>
    <string name="stat_action">Статистика</string>
    <string name="history_action">История</string>
    <string name="move_action">Переместить</string>
    <string name="delete_action">Удалить</string>
    <string name="choose_exercise">Выберите упражнение</string>
    <string name="ex_name">Название</string>
    <string name="ex_type">Тип</string>
    <string name="ex_create">Создать новое</string>
    <string name="ex_choose">Выбрать существующее</string>
    <string name="create_exercise_add_in_tr_success">Упражнение %1$s создано и добавленно в
        тренировку %2$s.
    </string>
    <string name="add_exercise_success">Упражнение %1$s добавленно в тренировку %2$s.</string>
    <string name="input_exercise_name_notification">Введите название упражнения</string>
    <string name="input_exercise_type_notification">Выберите тип упражнения</string>
    <string name="exercise_main_button">Упражнения</string>
    <string name="history_main_button">История</string>
    <string name="stat_main_button">Статистика</string>
    <string name="settings_main_button">Настройки</string>
    <string name="exit_main_button">Выход</string>
    <string name="last_result">Последний результат: %1$s</string>
    <string name="write_button_text">Записать</string>
    <string name="last_training_empty">-</string>
    <string name="sum_approach">Всего подходов:</string>
    <string name="empty_ex_list">Нет упражнений</string>
    <string name="create_exercise_success">Упражнение %1$s создано</string>
    <string name="training_radio_button">Тренировки</string>
    <string name="exercises_radio_button">Упражнения</string>
    <string name="empty_training_section">Вне тренировок</string>
    <string name="empty">Пусто</string>
    <string name="trainings">Тренировки</string>
    <string name="coming_soon">Появится в следующей версии</string>
    <string name="exercise_not_chosen">Упражнение не выбрано</string>
    <string name="backup_button_text">Сохранить бэкап</string>
    <string name="bitceps_ex_name_base">Штанга на бицепс стоя</string>
    <string name="french_ex_name_base">Французкий жим</string>
    <string name="run_ex_name_base">Бег (км)</string>
    <string name="pushups_ex_name_base">Отжимания от пола</string>
    <string name="podtyagivaniya_ex_name_base">Подтягивания</string>
    <string name="weight_ex_name_base">Вес</string>
    <string name="dumbbell_ex_type_base">Гантели</string>
    <string name="dumbbell_ex_name_base">Разводка гантелей</string>
    <string name="bitceps_size_ex_name_base">Объем бицепса</string>
    <string name="exercise_nothing_to_show">Не было ни одной тренировки</string>
    <string name="dialog_statistic_setting_title">Настройки</string>
    <string name="choose_exercise_stat">Упражнение:</string>
    <string name="measure_stat">По измерению:</string>
    <string name="group_by_stat">Сгрупировать по:</string>
    <string name="groups_stat">Группы:</string>
    <string name="build_button">Построить</string>
    <string name="group_by_checkbox_name">Группировать:</string>
    <string name="group_values_dialog_title">Выберите группы</string>

    <string name="baseExType_power">Силовой тип</string>
    <string name="baseExType_cycle">Циклический тип</string>
    <string name="stat_coming_soon">Подробная статистика появится в следующей версии, пока что
        только простой график
    </string>
</resources>