<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    tools:context=".SuperMainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.65"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <Button
                android:id="@+id/btnStart"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/start1"
                android:text="@string/SupMainAct_btb_start_tr"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnAddEx"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/addexe"
                android:text="@string/exercise_main_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnHist"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/hist1"
                android:text="@string/history_main_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnStat"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/stat1"
                android:text="@string/stat_main_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSettings"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/settings1"
                android:text="@string/settings_main_button"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnExit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/exit1"
                android:text="@string/exit_main_button"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>